Ajuste na rota do swagger
