# documentation/ComicsControllerDoc.go
@@ -4,22 +4,17 @@ import (
 	"net/http"
 )
 
-// @title           Swagger Example API
+// @title           Comics API
 // @version         1.0
-// @description     This is a sample server celler server.
+// @description    	This comics API is a sample server celler server.
 // @termsOfService  http://swagger.io/terms/
 
 // @contact.name   API Support
 // @contact.url    http://www.swagger.io/support
 // @contact.email  support@swagger.io
 
-// @license.name  Apache 2.0
-// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
-
-// @host      localhost:8080
-// @BasePath  /api/v1
-
-// @securityDefinitions.basic  BasicAuth
+// @host
+// @BasePath  /api/
 
 // @externalDocs.description  OpenAPI
 // @externalDocs.url          https://swagger.io/resources/open-api/// ErrorResponse represents the error response.
@@ -27,6 +22,7 @@ type ErrorResponse struct {
 	Message string `json:"message"`
 }
 
+// Create godoc
 // @Summary Create a new comic
 // @Description Create a new comic entry
 // @Accept json
